# pywatching

./: .gitignore  LICENSE  README.md  alarm.py  configs.json  mail_checker.py  main.py  setup.cfg
pywatching/: date.py  ghome.py  gmail.py  googlehome.py  line.py  logger.py  meter.py  temperature.py  watching.py
pywatching/settings/: vscode.txt
scripts/: check.sh  package.sh
settings/: vscode.txt
tests/: test_date.py  test_gmail.py  test_line.py
