[metadata]
name = pywatching
version = attr: pywatching.__version__
url = https://github.com/maitohchan/pywatching
author = maitohchan
author_email = None
license = LICENSE
description = wathing system using python

[options]
zip_safe = False
include_package_data = True
python_requires = >=3.6

packages = find:
install_requires =
    requests == 2.23.0

#test_suite = tests
#setup_requires = 
#    pytest-runner
#tests_require = 
#    pytest
#    pytest-mock
#    pytest-pep8
#    pytest-flakes
#    pytest-cov

[options.extras_require]
check =
    flake8
    black
    mypy

#dev =
#    matplotlib

#doc =
#    sphinx
#    nbsphinx
#    sphinx_rtd_theme


[options.entry_points]
#console_scripts =
#    py = pkg.sample:main
#    py_dev = pkg.sample:main_dev [dev]

#[tool:pytest]
#testpaths = tests
#python_files = test_*.py
#python_classes = Test
#python_function = test
#addopts = --cov=xxx --cov-report=report

[flake8]
max-line-length = 88
ignore = E203,W503,W504

[mypy]
ignore_missing_imports = 1
