[metadata]
name = pywatching
version = attr: pywatching.__version__
url = https://github.com/maitohchan/pywatching
author = maitohchan
author_email = None
license = LICENSE
description = wathing system using python

[options]
zip_safe = False
include_package_data = True
python_requires = >=3.6

packages = find:
install_requires =
    requests
    google-api-python-client
    google-auth-httplib2
    google-auth-oauthlib
    pychromecast

test_suite = tests
setup_requires = 
    pytest-runner
tests_require = 
    pytest
    pytest-mock
#    pytest-pep8
    pytest-flake8
    pytest-cov
    pytest-randomly
#    tox

[options.extras_require]
#check =
#    flake8
#    black
#    mypy

#dev =
#    matplotlib

#doc =
#    sphinx
#    nbsphinx
#    sphinx_rtd_theme


[options.entry_points]
console_scripts =
    pywatching = pywatching.watching:main
#    py_dev = pkg.sample:main_dev [dev]

[tool:pytest]
# http://note.crohaco.net/2016/python-pytest/#setup-cfg
testpaths = .
python_files = test_*.py
python_classes = Test
python_function = test_
addopts = --verbose --cov=pywatching --cov-report=html --cov-branch --flake8

[flake8]
max-line-length = 88
ignore = E203,W503,W504

[mypy]
ignore_missing_imports = 1

#[tox]
#envlint = flake8, py36, py37
#skipsdist = False
#testspaths = tests

#[testenv]
#deps = pytest
#commands = pytest
